correcting layout bug

--- a/client/css/header.css
+++ b/client/css/header.css
@@ -1,6 +1,6 @@
 .navbar{
     width:100%;
-    height: 80px;
+    height: 90px;
     background-color: #6F04D9;
    
 }
@@ -25,9 +25,4 @@
 .menu button a {
     text-decoration: none;
     color:white;
-}
-
-.general-container{
-    width: 100%;
-    margin: 0 auto;
 }
