--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,14 +1,30 @@
+
+html {
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+}
 body{
     font-family: 'PT Sans', sans-serif;
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+}
+main{
+    min-height: 100%; 
+    margin: 0;     
+    background: #05F29B;   
+      
 }
 .general-container{
+
     width: 100%;
-    height: 88vh;
-    background: #05F29B;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding:30px 0px;
+    padding: 30px 0;
     
 }
+
