--- a/client/css/table.css
+++ b/client/css/table.css
@@ -3,6 +3,7 @@
     width: 960px;
     border-radius: 10px;
     overflow: hidden;
+    padding-bottom: 20px;
 }
 .table{
     width: 100%;
